<resources>
    <string name="app_name">Shopping List</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="enter_text">Enter Item</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="kg">Kg</string>
    <string name="litre">Litre</string>
    <string name="items">Items</string>
    <string name="switch_layout">Switch Layout</string>
</resources>