<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:padding="4dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext"
        android:padding="12dp"
        android:lines="4"
        android:hint="@string/enter_text"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_quantity"
        android:padding="12dp"
        android:lines="2"
        android:inputType="numberDecimal"
        android:hint="@string/enter_quantity"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <RadioGroup
        android:id="@+id/radiogroup_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_kg_dialog"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/kg" />

        <RadioButton
            android:id="@+id/radioButton_lt_dialog"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/litre" />

        <RadioButton
            android:id="@+id/radioButton_item_dialog"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/items" />
    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_update"
        android:text="@string/update"
        android:layout_marginTop="8dp"/>

</LinearLayout>